[package]
name = "spawn"
authors = ["Sam L. Thomas <s@ghost.sh>"]
description = "Simple IPC-based RPC for forked processes"
license = "MIT OR Apache-2.0"
version = "0.0.1"
edition = "2024"
documentation = "https://docs.rs/spawn"
repository = "https://github.com/xorpse/spawn.git"
readme = "./README.md"

[dependencies]
ipc-channel = "0.19"
nix = { version = "0.29", features = ["process"] }
rand = { version = "0.9", features = ["thread_rng"] }
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
